ios/demo/www/geolocation/css/index.css
/* ... */
#masthead #nav li, #masthead ul.main-navigation li {
	float: left;
	line-height: 11px;
	padding: 0pt;
	margin: 0pt 20px 0pt 0pt; }

#masthead #nav a, #masthead ul.main-navigation a {
	font-weight: normal;
	font-size: 11px;
	color: rgb(187, 187, 187);
	text-transform: uppercase;
	letter-spacing: 1px; }

#masthead h2 {
	position: absolute;
	left: 0pt;
	top: 100px; }

#masthead #nav a:hover, #masthead ul.main-navigation a:hover { color: rgb(236, 236, 236); }
#primaryContent {
	padding: 52px 0;
}

#primaryContent #info {
	float: left;
	margin: 0 45px 0 0;
	width: 355px;
}

#primaryContent #info p {
	font-size: 18px;
	font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2", georgia, times, serif;
	line-height: 26px;
	margin: 0 0 26px;
	font-weight: 400;
	color: #767678;
}

/* Screencasts and Videos */
#screencasts {
	padding: 57px 0pt 54px;
	background: none repeat scroll 0% 0% rgb(246, 246, 248);
	border-bottom: 1px solid rgb(230, 230, 232);
	position: relative; }

#screencasts h3 { margin: 0pt; }
#screencasts h4 {
	font-family: "ff-meta-serif-web-pro-1","ff-meta-serif-web-pro-2",georgia,times,serif;
	color: rgb(178, 61, 116);
	font-style: italic;
	font-size: 14px;
	line-height: 21px;
	margin: 0pt 0pt 21px;
	font-weight: normal; }

#about { padding: 52px 0pt; }

#sections {
	float: right;
	width: 540px;
	position: relative; }

#sections #section-1, #sections #section-2, #sections #section-3, #sections #section-4 {
	padding: 0pt 0pt 36px;
	margin: 0pt 0pt 36px;
	border-bottom: 2px solid rgb(230, 230, 232); }

#sections .issue-details {
	width: 300px;
	float: left; }

#sections p strong {
	display: block;
	padding: 5px 0pt 2px;
	font-family: georgia,times,serif;
	color: rgb(178, 61, 116);
	font-style: italic;
	font-size: 14px;
	line-height: 21px;
	margin: 0pt;
	font-weight: normal; }

/* About  */
.about {
list-style: none;
}

/* bottombar */

#bottombar {
	background: none repeat scroll 0% 0% rgb(27, 27, 29);
	color: rgb(134, 134, 137);
	padding: 10px 0pt 40px; }

#bottombar h3 { color: rgb(250, 250, 252); }
#bottombar #team { float: right; width: 460px; }
#bottombar #contact { float: left; width: 380px; }


#cta { padding: 57px 0pt 39px;
	background: none repeat scroll 0% 0% rgb(246, 246, 248);
	border-bottom: 1px solid rgb(230, 230, 232); }

#cta #ci-slideshow { float: left;
	width: 660px;
	margin-right: 20px; }

#cta #ci-slideshow ul { margin: 0pt;
	padding: 0pt;
	float: right;
	color: rgb(153, 153, 154); }

#cta #ci-slideshow li { list-style: none outside none;
	display: inline;
	padding: 0pt;
	margin: 0pt;
	font-size: 11px; }

#cta #ci-slideshow li a { padding: 5px 5px 2px 0pt; display: inline-block; }
#cta #ci-slideshow div { border: 1px solid rgb(212, 212, 212);
	height: 272px;
	width: 652px; }

#cta #ci-slideshow div img { border: 1px solid rgb(255, 255, 255);
	height: 270px;
	width: 650px; }

#cta small { float: left;
	font-size: 11px;
	color: rgb(153, 153, 154);
	padding: 6px 0pt 0pt;
	line-height: 19px;
	clear: both; }

#cta p { float: left;
	width: 220px;
	margin-right: 20px; }

#cta p.plus { margin-right: 0pt; }

.clear, .toggle-clear { clear: both; }
.ui-tabs-hide { display: none; }
li.ui-tabs-selected a { color: rgb(153, 153, 154); }



.red {
    color: #cb202a;
}

p.message, p.error {
    font: normal 1em Helvetica, Arial, sans-serif;
    padding: 0 3px;
}

p.message {
    border: 1px solid #CC0000;
    background-color: #FFFFFF;
    color: black;
}

p.error {
    border: 1px solid #FF0000;
    background-color: #CCCCCC;
    color: white;
}

#content {
    width: 85%;
    margin: 20px auto;
    padding: 5px;
    background-color: white;
    min-height: 300px;
}

#content h1, #content h2 {
    font: normal 1.4em Helvetica, Arial, sans-serif;
    color: #3c6b92;
}

#content p, h1, h2, h3 {
    margin-bottom: .5em;
}

#content h1 {
    border-bottom: solid 2px #3c6b92;
}

#content h2.error {
    color: #cb7d20;
}

/* bwTable */

.bwTable {
    background: #CCCCCC;
    margin-bottom: .5em;
    border: 1px solid #CCCCCC;
    border-collapse: collapse;
}

.bwTable tr, .bwTable td, .bwTable th {
    font: normal 1em Helvetica, Arial, sans-serif;
    text-align: left;
    border: solid 1px #666666;
    padding: 1px 3px;
}

.bwTable tr:nth-child(odd) {
    background: #666666;
}

.bwTable th {
    background: #666666;
    color: #CCCCCC;
    border: solid 1px #666666;
}

.bwTable td {
    min-width: 100px;
}
/* ... */

